--- a/code/1M_CBL-B_descriptors_and_labels_generation.ipynb
+++ b/code/1M_CBL-B_descriptors_and_labels_generation.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/1M_CBL-B/1M_CBL-B_pairs.tsv', delimiter='\\t')\n",
+    "df = pd.read_csv('../data/CBL-B/1M_CBL-B_pairs.tsv', delimiter='\\t')\n",
     "df"
    ]
   },
@@ -271,6 +271,17 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "3f6d0e43-9245-432f-aeed-5b4dfe683710",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rdkit import RDLogger                                                                                                                                                               \n",
+    "RDLogger.DisableLog('rdApp.*')  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "de615ca4-abaf-4cfa-aaf5-2080733a7a62",
    "metadata": {},
    "outputs": [
@@ -278,7 +289,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating fingerprints: 1000000fp [05:00, 3326.85fp/s]\n"
+      "Generating fingerprints: 25280fp [00:07, 3460.22fp/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m col_idx \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m()\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m count, (smi_1, smi_2) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(tqdm(\u001b[38;5;28mzip\u001b[39m(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msmiles_1\u001b[39m\u001b[38;5;124m'\u001b[39m], df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msmiles_2\u001b[39m\u001b[38;5;124m'\u001b[39m]), desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGenerating fingerprints\u001b[39m\u001b[38;5;124m'\u001b[39m, unit\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfp\u001b[39m\u001b[38;5;124m'\u001b[39m)):\n\u001b[0;32m----> 7\u001b[0m     mol1 \u001b[38;5;241m=\u001b[39m \u001b[43mChem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMolFromSmiles\u001b[49m\u001b[43m(\u001b[49m\u001b[43msmi_1\u001b[49m\u001b[43m)\u001b[49m \n\u001b[1;32m      8\u001b[0m     mol2 \u001b[38;5;241m=\u001b[39m Chem\u001b[38;5;241m.\u001b[39mMolFromSmiles(smi_2)\n\u001b[1;32m     10\u001b[0m     fp1 \u001b[38;5;241m=\u001b[39m rdmd\u001b[38;5;241m.\u001b[39mGetMorganFingerprintAsBitVect(mol1, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparameters)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -313,14 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "721e0c17-b262-4f8a-ba4d-d860647161fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "fps = ss.hstack([fingerprint_matrix, reaction_features])\n",
     "#Save fingerprints as sparse matrix\n",
-    "#ss.save_npz('../data/1M_CBL-B/1M_CBL-B_fingerprints.npz', fingerprint_matrix)"
+    "#ss.save_npz('../data/CBL-B/1M_CBL-B_fingerprints.npz', fingerprint_matrix)"
    ]
   },
   {
@@ -333,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3cc249f6-098c-4e8a-9264-fe1a64323899",
    "metadata": {},
    "outputs": [],
@@ -345,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "619d45ed-71d2-436d-bb9c-fe328e62ba53",
    "metadata": {},
    "outputs": [],
@@ -353,7 +375,7 @@
     "#Create np array with training labels for each pair: hit - '1', else - '0'\n",
     "y = np.where(((df['IFP'] >= q) & (df['IFP_polar']>=q_polar)), 1, 0)\n",
     "#Save labels as np array\n",
-    "#np.save('../data/1M_CBL-B/1M_CBL-B_labels.npy', y)"
+    "#np.save('../data/CBL-B/1M_CBL-B_labels.npy', y)"
    ]
   },
   {
@@ -381,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
