--- a/code/1M_DRD3_descriptors_and_labels_generation.ipynb
+++ b/code/1M_DRD3_descriptors_and_labels_generation.ipynb
@@ -201,7 +201,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/1M_DRD3/1M_DRD3_pairs.tsv', delimiter='\\t')\n",
+    "df = pd.read_csv('../data/DRD3/1M_DRD3_pairs.tsv', delimiter='\\t')\n",
     "df"
    ]
   },
@@ -235,6 +235,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "4960a3bf-6c0c-467a-89ac-c38b65f91d1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rdkit import RDLogger                                                                                                                                                               \n",
+    "RDLogger.DisableLog('rdApp.*')  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "f4af2a3d-989f-48e2-823c-09b45e1a6757",
    "metadata": {},
    "outputs": [
@@ -242,7 +253,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating fingerprints: 1000000fp [04:57, 3361.29fp/s]\n"
+      "Generating fingerprints: 1000000fp [04:54, 3391.14fp/s]\n"
      ]
     }
    ],
@@ -274,7 +285,7 @@
     "#convert to csr matrix:\n",
     "fingerprint_matrix =  ss.csr_matrix(fingerprint_matrix)\n",
     "#Save fingerprints as sparse matrix\n",
-    "#ss.save_npz('../data/1M_DRD3/1M_DRD3_fingerprints.npz', fingerprint_matrix)"
+    "#ss.save_npz('../data/DRD3/1M_DRD3_fingerprints.npz', fingerprint_matrix)"
    ]
   },
   {
@@ -287,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "619d45ed-71d2-436d-bb9c-fe328e62ba53",
    "metadata": {},
    "outputs": [],
@@ -299,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "10055155-5a75-4106-b8a1-0f6750b5ba10",
    "metadata": {},
    "outputs": [],
@@ -307,7 +318,7 @@
     "#Create np array with training labels for each pair: hit - '1', else - '0'\n",
     "y = np.where(((df['IFP'] >= q) & (df['IFP_polar']>=q_polar)), 1, 0)\n",
     "#Save labels as np array\n",
-    "#np.save('../data/1M_DRD3/1M_DRD3_labels.npy', y)"
+    "#np.save('../data/DRD3/1M_DRD3_labels.npy', y)"
    ]
   },
   {
@@ -335,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
