all results notebooks, full space code removed

--- a/notebooks/1M_CBLB_descriptors_and_labels_generation.ipynb
+++ b/notebooks/1M_CBLB_descriptors_and_labels_generation.ipynb
@@ -269,7 +269,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating fingerprints: 1000000fp [08:00, 2079.39fp/s]\n"
+      "Generating fingerprints: 1000000fp [08:07, 2052.57fp/s]\n"
      ]
     }
    ],
@@ -394,7 +394,6 @@
     "plt.ylabel('Number of molecules', fontsize=14)\n",
     "plot.spines['top'].set_visible(False)\n",
     "plot.spines['right'].set_visible(False)\n",
-    "#plt.savefig(f'/projects/ML-SpaceDock/pictures/CACHE4_1M_ifp_destribution.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -429,7 +428,7 @@
     "plt.xlabel('Number of pairs', loc='center', rotation=0, fontsize = 14)\n",
     "plot.spines['top'].set_visible(False)\n",
     "plot.spines['right'].set_visible(False)\n",
-    "#plt.savefig(f'/projects/ML-SpaceDock/pictures/CACHE4_1M_pair_destribution_by_reaction.png', dpi=300, bbox_inches='tight')"
+    "plt.show()"
    ]
   }
  ],
