--- a/notebooks/CBLB_descriptors_generation_and_indexing.ipynb
+++ b/notebooks/CBLB_descriptors_generation_and_indexing.ipynb
@@ -12,8 +12,7 @@
     "import numpy as np\n",
     "from scipy import sparse as ss\n",
     "from rdkit import Chem\n",
-    "from rdkit.Chem import rdMolDescriptors as rdmd\n",
-    "from rdkit.Chem import DataStructs\n",
+    "from rdkit.Chem import AllChem\n",
     "from tqdm import tqdm"
    ]
   },
@@ -165,7 +164,7 @@
     }
    ],
    "source": [
-    "df_bbs = pd.read_csv('/projects/ML-SpaceDock/data/CBL-B/building_blocks.tsv', delimiter='\\t')\n",
+    "df_bbs = pd.read_csv('/projects/ML-SpaceDock/data/CBLB/building_blocks.tsv', delimiter='\\t')\n",
     "df_bbs"
    ]
   },
@@ -305,7 +304,7 @@
     "    9: 'Triazole',\n",
     "    10: 'Williamson_ether'\n",
     "}\n",
-    "#np.save('../data/CBL-B/reactions_rules.npy', reaction_rules)"
+    "#np.save('../data/CBLB/reactions_rules.npy', reaction_rules)"
    ]
   },
   {
@@ -657,7 +656,7 @@
     }
    ],
    "source": [
-    "df_hits = pd.read_csv('../data/CBL-B/hits.tsv', delimiter='\\t')\n",
+    "df_hits = pd.read_csv('../data/CBLB/hits.tsv', delimiter='\\t')\n",
     "df_hits"
    ]
   },
@@ -699,7 +698,7 @@
    "source": [
     "for q in [0.6, 0.7, 0.8, 0.9]:\n",
     "    hits_idxs = get_hits_idxs(df_hits, q)\n",
-    "    #np.save(f'../data/CBL-B/hits_idxs_q_{q}.npy', hits_idxs)"
+    "    #np.save(f'../data/CBLB/hits_idxs_q_{q}.npy', hits_idxs)"
    ]
   },
   {
@@ -717,31 +716,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters={ \n",
-    "    \"radius\": 2,\n",
-    "    \"nBits\": 2048,\n",
-    "    \"invariants\": [],\n",
-    "    \"fromAtoms\": [],\n",
-    "    \"useChirality\": True,\n",
-    "    \"useBondTypes\": True,\n",
-    "    \"useFeatures\": False\n",
-    "}"
+    "fp_gen = AllChem.GetMorganGenerator(radius=2, fpSize=2048, includeChirality=True, useBondTypes=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "74b84229-2a38-4e2f-84e5-168c448e88fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from rdkit import RDLogger                                                                                                                                                               \n",
-    "RDLogger.DisableLog('rdApp.*')  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "id": "69c57cbe-173c-4248-9383-2f7805a0d73e",
    "metadata": {},
    "outputs": [
@@ -749,27 +729,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating fingerprints: 100%|█████████| 75697/75697 [00:59<00:00, 1264.21fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 35406/35406 [00:28<00:00, 1231.24fp/s]\n",
-      "Calculating fingerprints: 100%|█████████████| 150/150 [00:00<00:00, 1083.71fp/s]\n",
-      "Calculating fingerprints: 100%|███████████| 4060/4060 [00:03<00:00, 1229.25fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 66153/66153 [00:52<00:00, 1249.61fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 17993/17993 [00:14<00:00, 1246.70fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 30243/30243 [00:23<00:00, 1261.05fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 14532/14532 [00:11<00:00, 1227.81fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 28785/28785 [00:23<00:00, 1229.82fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 40583/40583 [00:33<00:00, 1223.34fp/s]\n",
-      "Calculating fingerprints: 100%|███████████| 6434/6434 [00:05<00:00, 1246.57fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 34489/34489 [00:27<00:00, 1261.38fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 10799/10799 [00:08<00:00, 1259.83fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 62973/62973 [00:49<00:00, 1271.22fp/s]\n",
-      "Calculating fingerprints: 100%|███████████| 3768/3768 [00:03<00:00, 1254.61fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 81459/81459 [01:04<00:00, 1264.47fp/s]\n",
-      "Calculating fingerprints: 100%|███████████| 1381/1381 [00:01<00:00, 1302.05fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 50270/50270 [00:40<00:00, 1238.73fp/s]\n",
-      "Calculating fingerprints: 100%|███████████| 6180/6180 [00:04<00:00, 1264.30fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 22217/22217 [00:17<00:00, 1247.67fp/s]\n",
-      "Calculating fingerprints: 100%|███████████| 9293/9293 [00:07<00:00, 1192.37fp/s]\n"
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 75697/75697 [01:18<00:00, 968.32fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 35406/35406 [00:37<00:00, 953.82fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████████| 150/150 [00:00<00:00, 975.43fp/s]\n",
+      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 4060/4060 [00:04<00:00, 963.72fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 66153/66153 [01:08<00:00, 968.44fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 17993/17993 [00:18<00:00, 967.05fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 30243/30243 [00:30<00:00, 981.60fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 14532/14532 [00:14<00:00, 988.50fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 28785/28785 [00:29<00:00, 978.26fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 40583/40583 [00:41<00:00, 974.48fp/s]\n",
+      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 6434/6434 [00:06<00:00, 991.20fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 34489/34489 [00:34<00:00, 987.09fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 10799/10799 [00:10<00:00, 986.49fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 62973/62973 [01:03<00:00, 985.23fp/s]\n",
+      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 3768/3768 [00:03<00:00, 987.49fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 81459/81459 [01:23<00:00, 976.23fp/s]\n",
+      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 1381/1381 [00:01<00:00, 942.38fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 50270/50270 [00:52<00:00, 959.57fp/s]\n",
+      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 6180/6180 [00:06<00:00, 987.68fp/s]\n",
+      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 22217/22217 [00:22<00:00, 994.49fp/s]\n",
+      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 9293/9293 [00:09<00:00, 991.21fp/s]\n"
      ]
     }
    ],
@@ -779,20 +759,37 @@
     "    for i, smiles in enumerate(tqdm(df['smiles'], desc=\"Calculating fingerprints\", unit=\"fp\")):\n",
     "        \n",
     "        mol = Chem.MolFromSmiles(smiles)\n",
-    "        fp = rdmd.GetMorganFingerprintAsBitVect(mol, **parameters)\n",
+    "        fp = fp_gen.GetFingerprint(mol) \n",
     "        \n",
     "        fps[i] = np.array(fp).astype(np.int8)\n",
     "\n",
-    "    np.save(f'../data/CBL-B/bb_{n}.npy', fps)"
+    "    #np.save(f'../data/CBLB/bb_{n}.npy', fps)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91f7ec96-9a61-41c5-bb8c-c78589732a2a",
+   "id": "158aa9c8-4d58-4634-ab8c-36351196eb5e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f, (ax_box, ax_hist) = plt.subplots(2, sharex=True, gridspec_kw={\"height_ratios\": (.15, .85)})\n",
+    "sns.set(style=\"ticks\")\n",
+    "\n",
+    "sns.boxplot(data=df_hits_cache[1], orient=\"h\", fliersize=1, ax=ax_box)\n",
+    "sns.histplot(data=df_hits_cache[1], bins=12, kde=True, kde_kws={'bw_adjust':12}, ax=ax_hist)\n",
+    "plt.xlim([0.59,1.01])\n",
+    "ax_box.set(yticks=[])\n",
+    "ax_hist.set_yticks([0, 500000, 1000000, 1500000, 2000000, 2500000, 3000000], ['0', '0.5M', '1M', '1.5M', '2M', '2.5M', '3M'], fontsize=12)\n",
+    "ax_hist.set_xticks([i*0.1 for i in range(6,11)], [round(i*0.1,1) for i in range(6,11)],  fontsize=12)\n",
+    "sns.despine(ax=ax_hist)\n",
+    "sns.despine(ax=ax_box, left=True)\n",
+    "ax_box.set(xlabel='')\n",
+    "ax_hist.set_xlabel('IFP Tanimoto smilarity', fontsize=14)\n",
+    "ax_hist.set_ylabel('Number of molecules', fontsize=14)\n",
+    "#plt.savefig('/projects/ML-SpaceDock/pictures/CACHE4_full_hits_ifp_distribution', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -811,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
