--- a/notebooks/DRD3_descriptors_generation_and_indexing.ipynb
+++ b/notebooks/DRD3_descriptors_generation_and_indexing.ipynb
@@ -2,263 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "62ccd74c-08f9-47f0-bbd3-946414b5c89f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy import sparse as ss\n",
+    "import pandas as pd\n",
     "from rdkit import Chem\n",
-    "from rdkit.Chem import rdMolDescriptors as rdmd\n",
-    "from rdkit.Chem import DataStructs\n",
+    "from rdkit.Chem import AllChem\n",
     "from tqdm import tqdm"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a5ad9d27-f133-40aa-935e-b4f7980323b0",
-   "metadata": {},
-   "source": [
-    "## Read the building blocks and create an index for all pairs"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "dcc353d6-06eb-405b-a7a0-bb97f940511c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "amines_df = pd.read_csv('../data/DRD3/amines.tsv', delimiter='\\t')\n",
-    "acids_df = pd.read_csv('../data/DRD3/acids.tsv', delimiter='\\t')"
+    "df_amines = pd.read_csv('../data/DRD3/amines.tsv', delimiter='\\t')\n",
+    "df_acids = pd.read_csv('../data/DRD3/acids.tsv', delimiter='\\t')\n",
+    "df_hits = pd.read_csv('../data/DRD3/hits.tsv', delimiter='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "10bcc9f3-ad2a-4a6f-9fe3-890e590e35a8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f4dcf2a-fefe-428c-b381-264df88f74fa",
-   "metadata": {},
-   "source": [
-    "## Read hits and get indexes of hits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "63b59545-5cdd-45e0-a2eb-5f56df1fd0ca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bb1</th>\n",
-       "      <th>bb2</th>\n",
-       "      <th>reaction</th>\n",
-       "      <th>IFP</th>\n",
-       "      <th>IFP_polar</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>EN300-1878549_i001</td>\n",
-       "      <td>EN300-11626_i001</td>\n",
-       "      <td>Amide</td>\n",
-       "      <td>0.764706</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>EN300-3575340_i001</td>\n",
-       "      <td>EN300-1589742_i001</td>\n",
-       "      <td>Amide</td>\n",
-       "      <td>0.647059</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>EN300-3575340_i002</td>\n",
-       "      <td>EN300-7455807_i002</td>\n",
-       "      <td>Amide</td>\n",
-       "      <td>0.631579</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>EN300-3575340_i002</td>\n",
-       "      <td>EN300-384067_i001</td>\n",
-       "      <td>Amide</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>EN300-3575340_i002</td>\n",
-       "      <td>EN300-343493_i001</td>\n",
-       "      <td>Amide</td>\n",
-       "      <td>0.631579</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7702851</th>\n",
-       "      <td>EN300-103503_i002</td>\n",
-       "      <td>EN300-12411_i001</td>\n",
-       "      <td>Williamson_ether</td>\n",
-       "      <td>0.611111</td>\n",
-       "      <td>0.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7702852</th>\n",
-       "      <td>EN300-103503_i002</td>\n",
-       "      <td>EN300-10699143_i001</td>\n",
-       "      <td>Williamson_ether</td>\n",
-       "      <td>0.611111</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7702853</th>\n",
-       "      <td>EN300-103503_i003</td>\n",
-       "      <td>EN300-10547_i002</td>\n",
-       "      <td>Williamson_ether</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7702854</th>\n",
-       "      <td>EN300-103503_i003</td>\n",
-       "      <td>EN300-7354512_i001</td>\n",
-       "      <td>Williamson_ether</td>\n",
-       "      <td>0.611111</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7702855</th>\n",
-       "      <td>EN300-103503_i003</td>\n",
-       "      <td>EN300-25852_i001</td>\n",
-       "      <td>Williamson_ether</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7702856 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        bb1                  bb2          reaction       IFP  \\\n",
-       "0        EN300-1878549_i001     EN300-11626_i001             Amide  0.764706   \n",
-       "1        EN300-3575340_i001   EN300-1589742_i001             Amide  0.647059   \n",
-       "2        EN300-3575340_i002   EN300-7455807_i002             Amide  0.631579   \n",
-       "3        EN300-3575340_i002    EN300-384067_i001             Amide  0.666667   \n",
-       "4        EN300-3575340_i002    EN300-343493_i001             Amide  0.631579   \n",
-       "...                     ...                  ...               ...       ...   \n",
-       "7702851   EN300-103503_i002     EN300-12411_i001  Williamson_ether  0.611111   \n",
-       "7702852   EN300-103503_i002  EN300-10699143_i001  Williamson_ether  0.611111   \n",
-       "7702853   EN300-103503_i003     EN300-10547_i002  Williamson_ether  0.666667   \n",
-       "7702854   EN300-103503_i003   EN300-7354512_i001  Williamson_ether  0.611111   \n",
-       "7702855   EN300-103503_i003     EN300-25852_i001  Williamson_ether  0.666667   \n",
-       "\n",
-       "         IFP_polar  \n",
-       "0             0.50  \n",
-       "1             0.50  \n",
-       "2             0.50  \n",
-       "3             0.50  \n",
-       "4             0.50  \n",
-       "...            ...  \n",
-       "7702851       0.75  \n",
-       "7702852       0.50  \n",
-       "7702853       0.50  \n",
-       "7702854       0.50  \n",
-       "7702855       0.50  \n",
-       "\n",
-       "[7702856 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_hits = pd.read_csv('../data/CBL-B/hits.tsv', delimiter='\\t')\n",
-    "df_hits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "be68f851-2c85-4afd-8ffe-bf0f05767d0b",
+   "execution_count": 3,
+   "id": "db59fe7a-7296-4cca-993b-937855ded49a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_hits_idxs(df_hits, q):\n",
-    "    df_hits = df_hits[df_hits['IFP'] >= q]\n",
-    "    hits_idxs = np.array([], dtype=np.int64)\n",
-    "    for name, group in df_hits.groupby('reaction'):\n",
-    "        \n",
-    "        reaction_n = reactions_names[name]\n",
-    "        \n",
-    "        bb1_df = bbs[reaction_rules[reaction_n][0]]\n",
-    "        bb1_df = bb1_df.set_index('name')\n",
-    "        bb2_df = bbs[reaction_rules[reaction_n][1]]\n",
-    "        bb2_df = bb2_df.set_index('name')\n",
-    "        \n",
-    "        bb1_idxs = bb1_df.index.get_indexer(group['bb1'])\n",
-    "        bb2_idxs = bb2_df.index.get_indexer(group['bb2'])\n",
-    "        \n",
-    "        idxs_local = bb1_idxs * len(bb2_df) + bb2_idxs\n",
-    "        idxs = idxs_local + reaction_borders[reaction_n] - pairs_per_reaction[reaction_n] + 1\n",
-    "    \n",
-    "        hits_idxs = np.hstack([hits_idxs, idxs])\n",
-    "    return hits_idxs"
+    "num_amines = len(df_amines)\n",
+    "num_acids = len(df_acids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "38930f89-8fe1-4247-a4de-126d9959f5f7",
+   "execution_count": 4,
+   "id": "278aae6f-19e3-484a-9313-28e24e29d4f2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Saving indexes of hit pairs\n",
     "for q in [0.6, 0.7, 0.8, 0.9]:\n",
-    "    hits_idxs = get_hits_idxs(df_hits, q)\n",
-    "    #np.save(f'../data/CBL-B/hits_idxs_q_{q}.npy', hits_idxs)"
+    "    q_polar = 0.5\n",
+    "    df_ = df_hits[(df_hits['IFP']>=q)&(df_hits['IFP_polar']>=q_polar)]\n",
+    "    amines_idxs = np.array(df_amines.reset_index().set_index('name').loc[df_['name_1']]['index'])\n",
+    "    acids_idxs = np.array(df_acids.reset_index().set_index('name').loc[df_['name_2']]['index'])\n",
+    "    hits_idxs = amines_idxs * num_acids + acids_idxs\n",
+    "    #np.save(f'../data/DRD3/hits_idxs_q_{q}.npy', hits_idxs)"
    ]
   },
   {
@@ -271,36 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "0af14883-9058-4b87-8891-5b220ce7c4fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters={ \n",
-    "    \"radius\": 2,\n",
-    "    \"nBits\": 2048,\n",
-    "    \"invariants\": [],\n",
-    "    \"fromAtoms\": [],\n",
-    "    \"useChirality\": True,\n",
-    "    \"useBondTypes\": True,\n",
-    "    \"useFeatures\": False\n",
-    "}"
+    "fp_gen = AllChem.GetMorganGenerator(radius=2, fpSize=2048, includeChirality=True, useBondTypes=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "74b84229-2a38-4e2f-84e5-168c448e88fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from rdkit import RDLogger                                                                                                                                                               \n",
-    "RDLogger.DisableLog('rdApp.*')  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "69c57cbe-173c-4248-9383-2f7805a0d73e",
    "metadata": {},
    "outputs": [
@@ -308,38 +82,70 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating fingerprints: 100%|█████████| 75697/75697 [00:59<00:00, 1264.21fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 35406/35406 [00:28<00:00, 1231.24fp/s]\n",
-      "Calculating fingerprints: 100%|█████████████| 150/150 [00:00<00:00, 1083.71fp/s]\n",
-      "Calculating fingerprints: 100%|███████████| 4060/4060 [00:03<00:00, 1229.25fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 66153/66153 [00:52<00:00, 1249.61fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 17993/17993 [00:14<00:00, 1246.70fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 30243/30243 [00:23<00:00, 1261.05fp/s]\n",
-      "Calculating fingerprints: 100%|█████████| 14532/14532 [00:11<00:00, 1227.81fp/s]\n",
-      "Calculating fingerprints:  58%|█████▎   | 16827/28785 [00:13<00:09, 1225.02fp/s]"
+      "Calculating fingerprints: 100%|█████████████████████████████████████████████████████████████████| 33726/33726 [00:33<00:00, 1015.61fp/s]\n"
      ]
     }
    ],
    "source": [
-    "for n, df in enumerate(bbs):\n",
-    "    fps = np.zeros((len(df), 2048), np.int8)\n",
-    "    for i, smiles in enumerate(tqdm(df['smiles'], desc=\"Calculating fingerprints\", unit=\"fp\")):\n",
-    "        \n",
-    "        mol = Chem.MolFromSmiles(smiles)\n",
-    "        fp = rdmd.GetMorganFingerprintAsBitVect(mol, **parameters)\n",
-    "        \n",
-    "        fps[i] = np.array(fp).astype(np.int8)\n",
+    "fps = np.zeros((len(df_amines), 2048), np.int8)\n",
+    "for i, smiles in enumerate(tqdm(df_amines['smiles'], desc=\"Calculating fingerprints\", unit=\"fp\")):\n",
+    "    \n",
+    "    mol = Chem.MolFromSmiles(smiles)\n",
+    "    fp = fp_gen.GetFingerprint(mol)    \n",
+    "    fps[i] = np.array(fp).astype(np.int8)\n",
     "\n",
-    "    np.save(f'../data/CBL-B/bb_{n}.npy', fps)"
+    "np.save(f'../data/DRD3/amines.npy', fps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "91f7ec96-9a61-41c5-bb8c-c78589732a2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Calculating fingerprints: 100%|█████████████████████████████████████████████████████████████████| 19887/19887 [00:19<00:00, 1003.10fp/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fps = np.zeros((len(df_acids), 2048), np.int8)\n",
+    "for i, smiles in enumerate(tqdm(df_acids['smiles'], desc=\"Calculating fingerprints\", unit=\"fp\")):\n",
+    "    \n",
+    "    mol = Chem.MolFromSmiles(smiles)\n",
+    "    fp = fp_gen.GetFingerprint(mol)    \n",
+    "    fps[i] = np.array(fp).astype(np.int8)\n",
+    "\n",
+    "np.save(f'../data/DRD3/acids.npy', fps)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91f7ec96-9a61-41c5-bb8c-c78589732a2a",
+   "id": "75552c06-b4de-445b-8d29-e784dc9e3bb3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f, (ax_box, ax_hist) = plt.subplots(2, sharex=True, gridspec_kw={\"height_ratios\": (.15, .85)})\n",
+    "sns.set(style=\"ticks\")\n",
+    "\n",
+    "sns.boxplot(data=df_hits['tanimoto_IFP'], orient=\"h\", fliersize=1, ax=ax_box)\n",
+    "sns.histplot(data=df_hits['tanimoto_IFP'], bins=20, kde=True, kde_kws={'bw_adjust':5}, ax=ax_hist)\n",
+    "plt.xlim([0.59,1.01])\n",
+    "ax_box.set(yticks=[])\n",
+    "ax_hist.set_yticks([0, 500000, 1000000, 1500000, 2000000, 2500000, 3000000], ['0', '0.5M', '1M', '1.5M', '2M', '2.5M', '3M'], fontsize=12)\n",
+    "ax_hist.set_xticks([i*0.1 for i in range(6,11)], [round(i*0.1,1) for i in range(6,11)],  fontsize=12)\n",
+    "sns.despine(ax=ax_hist)\n",
+    "sns.despine(ax=ax_box, left=True)\n",
+    "ax_box.set(xlabel='')\n",
+    "ax_hist.set_xlabel('IFP Tanimoto smilarity', fontsize=14)\n",
+    "ax_hist.set_ylabel('Number of molecules', fontsize=14)\n",
+    "#plt.savefig('/projects/ML-SpaceDock/pictures/DRD3_full_hits_ifp_distribution', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -358,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
