acquirer and estimator renewed

--- a/notebooks/CBLB_descriptors_generation_and_indexing.ipynb
+++ b/notebooks/CBLB_descriptors_generation_and_indexing.ipynb
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "df_bbs = pd.read_csv('/projects/ML-SpaceDock/data/CBLB/building_blocks.tsv', delimiter='\\t')\n",
+    "df_bbs = pd.read_csv('../data/CBLB/building_blocks.tsv', delimiter='\\t')\n",
     "df_bbs"
    ]
   },
@@ -787,7 +787,7 @@
     "ax_box.set(xlabel='')\n",
     "ax_hist.set_xlabel('IFP Tanimoto smilarity', fontsize=14)\n",
     "ax_hist.set_ylabel('Number of molecules', fontsize=14)\n",
-    "#plt.savefig('/projects/ML-SpaceDock/pictures/CACHE4_full_hits_ifp_distribution', dpi=300, bbox_inches='tight')\n",
+    "#plt.savefig('', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   }
